src/assets/scss/_editor.scss
.editor-section {
  //position: fixed;
  top: 80px;
  left: 0;
  right: 0;
  background: $white;
  border-bottom: 1px solid $soft-gray;
  z-index: 10;
  .header-document {
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid $soft-gray;
    .header-document-right {
      display: flex;
      align-items: center;
    }
    .form {
      .form-group {
        margin: 0;
      }
      .input-group-addon {
        @include border-radius(0);
        background: none;
        border: none;
        &[class^="icon-"]:before, &[class*=" icon-"]:before {
          font-size: 35px;
          margin-top: 5px;
          display: inline-block;
        }
      }
      input.form-control {
        border: none;
        -webkit-box-shadow: none;
        -moz-box-shadow: none;
        box-shadow: none;
        height: 90px;
        font-style: italic;
        color: $text-color-blend;
        font-size: 20px;
        font-family: 'Rubik', sans-serif;
        font-weight: 300;
      }
    }
    .btn {
      &.btn-with-icon {
        margin: 0 1em;
        padding: 0px 20px 0 15px;
      }
    }
    .participants {
      display: flex;
      align-items: center;
      margin: 0;
      justify-content: flex-end;
      .not-avatar, .user-avatar {
        margin-left: 8px;
        &:first-child {
          margin-left: 0;
        }
      }
      .not-avatar {
        width: 40px;
        height: 40px;
        padding-top: 9px;
        color: $text-color-blend;
        font-size: 18px;
        font-family: 'Rubik', sans-serif;
        font-weight: 300;
        text-align: center;
        display: inline-block;
        vertical-align: middle;
        position: relative;
        background-color: lighten($primary-color, 55%);
        @include border-radius(20px);
      }
      .user-avatar {
        display: inline-block;
        vertical-align: middle;
        padding-left: 0;
        padding-right: 0;
      }
      .contributors {
        display: inline-block;
        img {
          margin-left: 10px !important;
          z-index: 5;
          position: relative;
          &:first-child {
            z-index: 10;
          }
          &:last-child {
            z-index: 1;
          }
          &:hover {
            z-index: 15;
          }
        }
      }
      .view-more {
        display: inline-block;
        margin-left: 10px;
        position: relative;
        .icon {
          font-size: 20px;
        }
        .drowdown-box {
          display: none;
          text-align: left;
          position: absolute;
          top: -14px;
          left: 0;
          width: 150px;
          background-color: $white;
          padding: 10px 10px 0;
          border: 1px solid $soft-gray;
          z-index: 5;
          img, .not-avatar {
            margin: 0 10px 10px 0;
          }
        }
        &:hover {
          .drowdown-box {
            display: block;
          }
        }
      }
    }
    share-settings {
      display: block;
    }
  }
  .toolbox {
    height: 60px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
    align-content: center;
    overflow-x: auto;
    overflow-y: hidden;
    & > [class*='col-'] {
      align-self: center;
      margin: auto;
    }
    .toolbox-2 {
      min-width: 8em;
    }
    .toolbox-4 {
      min-width: 9em;
    }
    .toolbox-5 {
      min-width: 11em;
    }
    .divider {
      width: 1px;
      height: 100%;
      background-color: $soft-gray;
    }
    .btn {
      padding: 0;
      border: none;
      background: none;
      [class^="icon-"]:before, [class*=" icon-"]:before {
        font-size: 30px;
        vertical-align: middle;
        margin-top: 8px;
        display: inline-block;
      }
    }
    .icon-caret {
      color: $caret-gray;
      display: inline-block;
      width: 10px;
      &:before {
        margin-left: -11px;
      }
    }
    .dropdown {
      display: inline-block;
      .dropdown-menu {
        top: 48px;
        width: 205px;
        padding: 0;
        margin: 0;
        border: none;
        border-top: 1px solid $soft-gray;
        @include border-radius(0);
        @include box-shadow(0px, 2px, 4px, transparentize(rgb(139, 111, 111), 0.78));
        .icon {
          color: $text-color;
          display: inline-block;
          &:before {
            font-size: 30px;
            padding-top: 5px;
            display: inline-block;
          }
          &:hover {
            cursor: pointer;
            color: $text-color-blend;
          }
        }
      }
    }
  }
}

.editor-box-container {
  background-color: $bg-gray;
  padding: 3em 12em 3em;
  position: relative;
  overflow-x: hidden;
  #editor-container {
    background-color: $white;
    border: 1px solid $soft-gray;
    min-height: 1200px;
    padding: 60px 80px;
    max-width: 1170px;
    min-width: 800px;
    width: 980px;
    margin: 0 auto;
  }
  .wave-editor-on {
    outline: none;
  }
  .btn-editor, .panel {
    margin-top: 32px;
    background-color: $white;
  }
  .btn-editor {
    line-height: 36px;
    padding-left: 7px;
    box-shadow: 0 2px 4px 0 rgba(139, 111, 111, 0.22);
    transition: all 0.3s;
    font-family: 'Rubik', sans-serif;
    @include border-radius(0);
    &.btn-with-icon {
      padding-left: 12px;
    }
    &.yellow {
      &:hover {
        background-color: $black;
        color: $highlight-color;
      }
      &.active,
      &:focus {
        background-color: $black;
        color: $white;
        &:hover {
          color: $highlight-color;
        }
      }
    }
    &.blue {
      &:hover {
        background-color: $black;
        color: $primary-color-blend-light;
      }
      &.active,
      &:focus {
        background-color: $black;
        color: $white;
        &:hover {
          color: $primary-color-blend-light;
        }
      }
    }
  }
  .panel {
    box-shadow: 0 2px 30px 0 rgba(185, 185, 185, 0.34);
    position: relative;
    transition: all 0.3s;
    margin-top: 70px;
    margin-bottom: 0;
    border: none;
    @include border-radius(0);
    .panel-body {
      padding: 20px;
      ul {
        padding-left: 1em;
        line-height: 2em;
        color: $caret-gray;
        li {
          margin-top: 10px;
          line-height: 20px;
          &:first-child {
            margin-top: 0;
          }
          & > ul {
            margin-top: 10px;
            margin-bottom: 25px;
            list-style: none;
          }
          a {
            color: $primary-color;
            text-decoration: underline;
            &:hover {
              color: $primary-color-blend-light;
            }
          }
        }
      }
    }
  }
  .editor-box-left,
  .editor-box-right {
    position: absolute;
    width: 20em;
    top: 3em;
    display: flex;
    flex-direction: column;
  }
  .editor-box-left {
    left: calc(((100vw - 980px) / 2) - 17em);
    align-items: flex-end;
    .btn-editor {
      margin-right: 1.7em;
    }
  }
  .editor-box-right {
    right: calc(((100vw - 980px) / 2) - 17em);
    align-items: flex-start;
    .btn-editor {
      margin-left: 1.7em;
      &:nth-child(n+2) {
        margin-top: 10px;
      }
    }
  }
  .toggle-items {
    width: 20em;
    padding: 0 !important;
    position: relative;
    .icon {
      position: absolute;
      top: -30px;
      right: 5px;
      font-size: 30px;
      z-index: 50;
      color: $secondary-color-blend;
      cursor: pointer;
    }
    .toggle-box {
      padding: 20px 20px 40px;
      margin-top: -30px;
      position: relative;
      background: $white;
      box-shadow: 0 2px 30px 0 rgba(185, 185, 185, 0.34);
      &:first-child {
        margin-top: 0;
      }
      &:last-child {
        padding-bottom: 20px;
      }
      .collapse-anchor {
        cursor: pointer;
        color: $text-color;
        font-size: 15px;
        font-family: 'Roboto', sans-serif;
        font-weight: 700;
        transition: all 0.3s;
        span {
          color: $text-color-blend;
          font-size: 13px;
          font-weight: 400;
          display: block;
          margin-top: 5px;
        }
        &[aria-expanded="false"] {
          &:hover {
            padding-bottom: 10px;
          }
        }
      }
      p {
        margin-top: 15px;
        color: $text-color-blend;
        font-size: 14px;
      }
      form,
      .form {
        .form-group:last-child {
          margin-bottom: 0;
        }
        input.form-control {
          font-size: 15px;
          height: auto;
          background: $light-gray;
          border-color: $soft-gray;
        }
        .btn-link {
          padding-left: 0;
          padding-right: 0;
          margin: 0;
          border: none;
          color: $text-color-blend;
          font-size: 13px;
          font-family: 'Rubik', sans-serif;
          font-weight: 400;
        }
      }
    }
  }
}

